<resources>
    <string name="app_name">Abikalkulator</string>
    <string name="app_info">%version% - © 2020</string>

    <string name="label_choose_intensified">Wähle deine Leistungskurse (5)</string>
    <string name="label_choose_basic">Wähle deine anderen Kurse (6)</string>
    <string name="label_chose_subject">Wähle einen Kurs</string>
    <string name="label_markAsExam">Als Prüfungsfach merken</string>
    <string name="label_markAsOralExam">Als mündliches Prüfungsfach merken</string>
    <string name="label_settingup_app">Die App wird eingerichtet…</string>
    <string name="label_yourintensified">Deine Leistungskurse</string>
    <string name="label_yourbasics">Deine Nebenkurse</string>
    <string name="label_yourseminar">Dein Seminarfach</string>
    <string name="label_yourexams">Deine Prüfungsfächer</string>
    <string name="label_chose_term">Wähle das Halbjahr</string>
    <string name="label_chose_grade">Erhaltene Punktzahl</string>
    <string name="label_chose_type">Art der Note</string>
    <string name="label_being_saved">Wird gespeichert…</string>
    <string name="label_grades_missing">Keine Noten gefunden.</string>
    <string name="label_mind_seminar">Seminarfach einbringen</string>
    <string name="label_replace_oralexam">Mündl. Prüfungsfach ersetzen</string>
    <string name="label_more_settings">Weitere Einstellungen</string>
    <string name="label_default_points">Standardpunktezahl</string>
    <string name="label_goalavg">Ziel-Abischnitt</string>
    <string name="label_goalpoints">Ziel-Punktzahl</string>
    <string name="label_striked">Fächer, die wir beim Berechnen streichen</string>
    <string name="label_quickoptions">Schnelloptionen</string>

    <string name="paragraph_setup_welcome">Herzlich willkommen beim Abikalkulator! Wir freuen uns dich hier zu treffen. Es ist uns eine Ehre, dein Speicherort für all\' deine Noten sein zu dürfen. Nun lass uns nicht lange reden, denn vorher wartet ein wenig Arbeit auf dich. In der folgenden Ersteinrichtung musst du uns deine Kursbelegung angeben, damit wir dir eine Übersicht erstellen können.</string>
    <string name="paragraph_algorythm_dialog">Unser Algorithmus sucht pro Halbjahr das schlechteste Fach, welches dann gestrichen wird.
        Ist das Fach jedoch ein Leistungsfach, wird kein Halbjahr gestrichen.
        Wenn das Fach ein Nebenfach ist und als mündliche Prüfung markiert ist, so erfolgt im letzten Halbjahr ebenfalls kein Streichen.</string>
    <string name="paragraph_algorythm">Unser Algorithmus ist sehr einfach gestaltet. Wenn du mehr darüber wissen möchtest, dann klicke auf diesen Text.</string>
    <string name="paragraph_sharewith">Hey, ich hab eine super App gefunden, womit man seine Noten perfekt Verwalten kann. Du bekommst sogar deinen Abischnitt angezeigt! Hier gehts zur App: %url%</string>
    <string name="paragrahp_setup_finished">Du hast es geschafft! Die App steht dir nun in vollem Umfang zur Verfügung.</string>

    <string name="btn_add_subject">Einen Kurs hinzufügen</string>
    <string name="btn_continue">Fortfahren</string>
    <string name="btn_finish">Abschließen</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Abbrechen</string>
    <string name="btn_show">Ansehen</string>
    <string name="btn_edit">Bearbeiten</string>
    <string name="btn_change">Mit Fach tauschen</string>
    <string name="btn_add">Hinzufügen</string>

    <string name="exp_examsubject">Prüfungsfach</string>
    <string name="exp_oralexamsubject">Mündliche Prüfung</string>
    <string name="exp_term">%. Term</string>
    <string name="exp_abi">Abitur</string>
    <string name="exp_overallpoints">Deine Punktzahl</string>
    <string name="exp_points">%points%/900Pkt.</string>
    <string name="exp_steps">Schritt %step%/%steps%</string>

    <string name="error_headline">Whooops!</string>
    <string name="error_occured">Es ist ein irreparabler Fehler aufgetreten. Die App wird geschlossen.</string>
    <string name="error_missing_intensified">Du musst 5 Leistungskurse angeben, um fortzufahren.</string>
    <string name="error_missing_basics">Du musst 6 Nebenfächer angeben, um fortzufahren.</string>
    <string name="error_missing_writtenexams">Du musst mindestens 3 schriftliche Prüfungen angeben, um fortzufahren.</string>
    <string name="error_missing_oralexams">Du musst mindestens 2 mündliche Prüfungen angeben, um fortzufahren.</string>
    <string name="error_setup_cancelled">Du hast das Setup abgebrochen. Die App kann ohne Einrichtung nicht genutzt werden.</string>
    <string name="error_cant_be_edited">Das kann nicht bearbeitet werden.</string>

    <string name="headline_add_grade">Neue Note hinzufügen</string>
    <string name="headline_add_subject">Fach hinzufügen</string>
    <string name="headline_edit_grade">Einzelnote bearbeiten</string>
    <string name="headline_edit_subject">Kurs bearbeiten</string>
    <string name="headline_settings">Einstellungen</string>
    <string name="headline_goals">Deine Ziele</string>
    <string name="headline_subjects">Deine Kursbelegung</string>
    <string name="headline_yousure">Bist du sicher?</string>
    <string name="headline_settings_goals">Deine Ziele bearbeiten</string>
    <string name="headline_info">Zur Information</string>
    <string name="headline_setup_welcome">Schön dich zu sehen!</string>
    <string name="headline_setup_finished">Einrichtung abgeschlossen!</string>

    <string name="subject_math">Mathematik</string>
    <string name="subject_english">Englisch</string>
    <string name="subject_pe">Sport</string>
    <string name="subject_chemistry">Chemie</string>
    <string name="subject_german">Deutsch</string>
    <string name="subject_informatics">Informatik</string>
    <string name="subject_economics">Wirtschaft &amp; Recht</string>
    <string name="subject_history">Geschichte</string>
    <string name="subject_french">Französisch</string>
    <string name="subject_art">Kunst</string>
    <string name="subject_religion">Religion</string>
    <string name="subject_seminar">Seminarfach</string>
    <string name="subject_geo">Geografie</string>
    <string name="subject_soz">Sozialkunde</string>
    <string name="subject_music">Musik</string>
    <string name="subject_physics">Physik</string>
    <string name="subject_bio">Biologie</string>
    <string name="subject_ethics">Ethik</string>
    <string name="subject_spanish">Spanisch</string>
    <string name="subject_russian">Russisch</string>
    <string name="subject_latin">Latein</string>

    <string name="type_lk">Leistungskontrolle</string>
    <string name="type_ka">Kursarbeit</string>
    <string name="type_oral">Mündlich</string>
    <string name="type_epoch">Epochalnote</string>
    <string name="type_process">Prozessnote</string>
    <string name="type_thesis">Seminarfacharbeit</string>
    <string name="type_presentation">Kolloquium</string>

    <string name="menu_home">Übersicht</string>
    <string name="menu_goals">Ziele</string>
    <string name="menu_settings">Einstellungen</string>

    <string name="settings_seminar">Seminarfacheinstellungen</string>
    <string name="settings_seminar_desc">Einbringen und Fach ersetzen</string>
    <string name="settings_subjects">Deine Fächer</string>
    <string name="settings_subjects_desc">Fächer bearbeiten und ersetzen</string>
    <string name="settings_goals">Deine Ziele</string>
    <string name="settings_goals_desc">Standard-Punkte, Ziel-Abi, Ziel-Punkte</string>
    <string name="settings_share">App teilen</string>
    <string name="settings_share_desc">Auf WhatsApp, Facebook u.a. teilen</string>
    <string name="settings_privacy">Datenschutz &amp; Sicherheit</string>
    <string name="settings_privacy_desc">Datenschutzerklärung anzeigen</string>
    <string name="settings_reset">Zurücksetzen</string>
    <string name="settings_reset_desc">App-Daten löschen</string>

    <string name="notice_settings_beingsaved">Einstellungen werden gespeichert…</string>
    <string name="notice_settings_saved">Einstellungen gespeichert</string>
    <string name="notice_replace_subjects">Bist du sicher, dass du diese Fächer tauschen möchtest? Noten, die nicht mehr brauchbar sind, werden dann gelöscht.</string>
    <string name="notice_goal_reached">Du wirst dein Ziel von %goal% erreichen.</string>
    <string name="notice_goal_notreached">Du wirst dein Ziel von %goal% nicht erreichen.</string>
    <string name="notice_setup_required">Beachte, dass die App ohne Einrichtung nicht nutzbar ist.</string>
    <string name="notice_app_beingresetted">App wird zurückgesetzt…</string>
    <string name="notice_app_data_will_resetted">Alle deine vorgenommenen Einstellungen, sowie deine Fächerwahl und eingetragenen Noten werden gelöscht.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
