<?xml version="1.0" encoding="utf-8"?>
<resources>

    <subject id="0" title="@string/subject_math" />
    <subject id="1" title="@string/subject_chemistry" />
    <subject id="2" title="@string/subject_physics" />
    <subject id="3" title="@string/subject_bio" />
    <subject id="4" title="@string/subject_informatics" />
    <subject id="5" title="@string/subject_economics" short="Wir. &amp; Recht"/>
    <subject id="6" title="@string/subject_german" />
    <subject id="7" title="@string/subject_english" />
    <subject id="8" title="@string/subject_french" />
    <subject id="9" title="@string/subject_history" />
    <subject id="10" title="@string/subject_geo" />
    <subject id="11" title="@string/subject_soz" />
    <subject id="12" title="@string/subject_pe" />
    <subject id="13" title="@string/subject_religion" />
    <subject id="14" title="@string/subject_art" />
    <subject id="15" title="@string/subject_music" />

</resources>