<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/Headline.h4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline_edit_subject"
        android:textAlignment="center"/>

    <CheckBox
        style="@style/CheckBox"
        android:id="@+id/dialog_checkbox_exam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_markAsExam"
        android:layout_marginTop="@dimen/default_padding_large"/>

    <CheckBox
        style="@style/CheckBox"
        android:id="@+id/dialog_checkbox_oralexam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_markAsOralExam"
        android:layout_marginBottom="@dimen/default_padding_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <de.zitzmanncedric.abicalc.views.AppButton
            style="@style/Button.primary"
            android:id="@+id/dialog_btn_positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok" />

    </LinearLayout>

</LinearLayout>