<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.subject.AddGradeActivity"
    android:orientation="vertical">

    <de.zitzmanncedric.abicalc.views.AppActionBar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        style="@style/Headline.h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline_add_grade"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <TextView
        style="@style/TextAppearance.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_chose_subject"
        android:layout_marginTop="@dimen/default_padding_large"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <Spinner
        style="@style/Spinner"
        android:id="@+id/spinner_subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"
        android:dropDownWidth="match_parent"
        android:popupBackground="@drawable/background_dialog"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/TextAppearance.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_chose_term"
        android:layout_marginTop="@dimen/default_padding_large"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <Spinner
        style="@style/Spinner"
        android:id="@+id/spinner_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding" />

    <TextView
        style="@style/TextAppearance.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_chose_type"
        android:layout_marginTop="@dimen/default_padding_large"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <Spinner
        style="@style/Spinner"
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <TextView
        style="@style/TextAppearance.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_large"
        android:layout_marginBottom="@dimen/default_padding"
        android:text="@string/label_chose_grade"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <NumberPicker
        android:id="@+id/picker_grade_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding">

        <de.zitzmanncedric.abicalc.views.AppButton
            android:id="@+id/btn_add"
            style="@style/Button.primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addGrade"
            android:text="@string/btn_add"
            android:layout_marginBottom="@dimen/default_padding"/>

        <de.zitzmanncedric.abicalc.views.AppButton
            android:id="@+id/btn_cancel"
            style="@style/Button.primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/btn_cancel" />

    </LinearLayout>

</LinearLayout>