<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.setup.SetupWelcomeFragment"
    android:paddingTop="@dimen/window_padding"
    android:paddingStart="@dimen/window_padding"
    android:paddingEnd="@dimen/window_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_banner_height"
            android:src="@drawable/ic_undraw_welcome" />

        <TextView
            style="@style/Headline.h5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/window_padding"
            android:textAlignment="center"
            android:text="@string/headline_setup_welcome" />

        <TextView
            style="@style/TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/paragraph_setup_welcome" />
        <TextView
            style="@style/TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/window_padding_large"
            android:textSize="13sp"
            android:alpha="0.5"
            android:text="@string/notice_setup_required" />

    </LinearLayout>
</ScrollView>