<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minHeight="450dp">

    <TextView
        android:id="@+id/sheet_title"
        style="@style/TextAppearance.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"
        android:layout_marginTop="@dimen/default_padding_large"
        android:layout_marginBottom="@dimen/default_padding_large"
        android:text="@string/label_chose_subject" />

    <CheckBox
        android:id="@+id/sheet_checkbox_exam"
        style="@style/CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/label_markAsExam"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <CheckBox
        android:id="@+id/sheet_checkbox_oralexam"
        style="@style/CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/label_markAsOralExam"
        android:layout_marginStart="@dimen/window_padding"
        android:layout_marginEnd="@dimen/window_padding"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sheet_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/window_padding"
        android:paddingEnd="@dimen/window_padding"/>
</LinearLayout>